--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -77,7 +77,7 @@ main{
 
 }
 .section-title{
- 
+ text-align: center;
  margin-bottom: 30px;
  font-weight: 700;
  font-size: 35px;
@@ -85,7 +85,7 @@ main{
 .section-discription{
  color: #757575;
  font-size: 18px;
- margin-bottom: 30px;
+ margin-bottom: 50px;
 }
 .about-info-containar{
     display: flex;
@@ -100,3 +100,28 @@ main{
     font-size: 20px;
     color: #474747;
 }
+/* what I do section */
+.what-I-do{
+    margin-top: 130px;
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    background:#FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+border-radius: 5px;
+padding: 30px;
+
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+    color: #757575;
+}
+/* Resume styles */
